Refs #140559 - Fix spacing in landing page.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -53,6 +53,13 @@ div#page-document {
   div.searchapp {
     background-color: white;
 
+    &.landing-page {
+      div.twelve.wide {
+        padding-right: 0px;
+        padding-left: 0px;
+      }
+    }
+
     div > div.ui.container {
       padding-left: 0px !important;
     }
